--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -33,6 +33,7 @@
       overflow-y: auto;
       /* calculate height of nav list */
       height: calc(100vh - 90px - 2em); // viewport height - approx. masthead height - main content top margin
+      border-right: 1px solid $border-color;
     }
   }
 
